--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
   </header>
 
   <body>
-
-    <img src = "https://www.dropbox.com/s/nt5g9qbn5ocrtc2/traintracks1.png?dl=1" alt="picture"/>
+  
+    <section class="parallax">
+      <div class="inner_parallax">
+ 
   
     <h2>JULIA JOVANOVIC</h2>
     <div id="icons">
-      <a href="https://github.com/j-explorer">
+      <a href="https://github.com/j-explorer" target="_blank">
         <i class="fa fa-github fa-2x fa-inverse" id="github"></i>
       </a>
-      <a href="https://twitter.com/J_explorer393">
+      <a href="https://twitter.com/J_explorer393" target="_blank">
       <i class="fa fa-twitter fa-2x fa-inverse" id="twitter"></i>
       </a>
-      <a href="https://www.linkedin.com/in/julia-jovanovic-580132225/">
+      <a href="https://www.linkedin.com/in/julia-jovanovic-580132225/" target="_blank">
       <i class="fa fa-linkedin-square fa-2x fa-inverse" id="linkedin"></i>
       </a>
     </div>
-    
+    </div>
+    </section>
 
     <h1>Front-end Web Developer & UI/UX Designer</h1>
 
@@ -45,13 +48,13 @@
     <div id="section_1">
      
       <a href="http://fantasybookcovers.co.uk/" target="_blank" class="website_image">
-      <img src="https://www.dropbox.com/s/p7ti3ptba0grswc/website_photo.png?dl=1"  id="website_1" />
+      <img src="https://www.dropbox.com/s/p7ti3ptba0grswc/website_photo.png?dl=1"  id="website_1" alt="Fantasy Book Covers Website" />
       </a>
 
       <div class="website_description" id="website_1_p">
-        <p id="p1">"Fantasy Book Covers LTD." (pseudo brand) is to deliver limited edition sci-fi and fantasy collections, with custom made cover artworks.</p>
+        <p id="p1">"Fantasy Book Covers" is a pseudo-brand, here to create hand-made, fantasy book covers.</p>
         <p id="p2">
-           The audience targeted are in Australia and New Zealand, and range between 20-50. 
+           The aim of this project was to <b>design,</b> and <b>develop</b> the website using HTML, CSS and Vanilla JS. This was my first e-commerce website built.
        </p>
       </div>
     </div>
