--- a/certificates/index.html
+++ b/certificates/index.html
@@ -16,6 +16,7 @@
     <img id="cert_2" src="https://www.dropbox.com/s/c9l5bh9kdo6je7p/cert_2.png?dl=1"/>
     <img id="cert_3" src="https://www.dropbox.com/s/l1w8kpiwr3d3atr/cert_3.png?dl=1"/>
     <img id="cert_4" src="https://www.dropbox.com/s/tg2w0n0vaysql8g/cert_4.png?dl=1"/>
+    <img id="cert_5" src="https://www.dropbox.com/s/ai0pho1i70s74s9/Responsive-Web-Design.png?dl=1"/>
    </div>
 
   <div id="syllabus">
@@ -54,6 +55,13 @@
         <li>Redirecting input and output</li>
         <li>Configuring the environment</li>
        </ul>
+     </div>
+
+     <div id="responsive_syllabus">
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+      </ul>
      </div>
   </div>
 
