file structure change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body>
-  <img src="../web_dev_pics/traintracks.png" alt="" class="fixed z-[-1] w-[100%] h-100v"/> 
+  <img src="./web_dev_pics/traintracks.png" alt="" class="fixed z-[-1] w-[100%] h-100v"/> 
 
   <h1 class="absolute mt-[55%] w-[100%] text-4xl text-white text-center sm:mt-[25%]">JULIA JOVANOVIC</h1>
 
@@ -49,7 +49,7 @@
     <div class="flex flex-col sm:flex-row">
      
       <div class="w-[100%] h-50v sm:w-[50%]">
-       <img src="../web_dev_pics/0xchemist.club.png"  class="w-[80%] mt-[5%]" alt="" />
+       <img src="./web_dev_pics/0xchemist.club.png"  class="w-[80%] mt-[5%]" alt="" />
 
        <div class=" w-[100%] mt-[5%]">
         <button type="button" id="0xchemistclub_button" class="text-l mr-[15%] border-solid border-black border hover:bg-slate-400 hover:text-white hover:border-slate-400 py-2 px-4 rounded shadow pointer sm:text-xl">See Website</button>
@@ -112,6 +112,7 @@
                 <li>Youtube</li>
                 <li>Documentation</li>
                 <li>Stackoverflow</li>
+                <li>Chat GPT</li>
               </ul>
 
               <p class="mt-[10%] font-medium">Collaboration</p>
