--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <li> 0x Chemist Club website</li>
                 <li>CryptoZombies Courses</li>
                 <li>CodeWars Javascript</li>
+                <li>ISTQB Tester Course (Udemy)</li>
               </ul>
 
               <p class="mt-[10%] font-medium">Next</p>
