--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     <a href="https://twitter.com/J_explorer393">
       <i class="fa-brands fa-twitter fa-2x fa-inverse mr-[2%]" id="twitter"></i>
     </a>
-    <a href="https://www.linkedin.com/in/julia-jovanovic-580132225/">
-      <i class="fa-brands fa-linkedin fa-2x fa-inverse" id="linkedin"></i>
-    </a>
+   
   </div>
 
   <main class="absolute mt-[100%] bg-white opacity-90 sm:mt-[40%] ">
@@ -86,7 +84,7 @@
             <div class="text-l mt-[3%] w-[100%] sm:w-[21%] sm:text-lg">
               <p class="font-medium">Currently Completing</p>
               <ul class="list-disc list-inside"> 
-                <li> 0x Chemist Club website</li>
+                <li>0x Chemist Club website</li>
                 <li>CryptoZombies Courses</li>
                 <li>CodeWars Javascript</li>
                 <li>ISTQB Tester Course (Udemy)</li>
@@ -94,7 +92,7 @@
 
               <p class="mt-[10%] font-medium">Next</p>
               <ul class="list-disc list-inside">
-                <li>React.js</li>
+                <li></li>
               </ul>
 
               <p class="mt-[10%] font-medium">Technology</p>
@@ -102,6 +100,7 @@
                 <li>HTML5</li>
                 <li>CSS3, Tailwind CSS</li>
                 <li>Javascript</li>
+                <li>React</li>
               </ul>
             </div>
 
@@ -115,13 +114,12 @@
                 <li>Youtube</li>
                 <li>Documentation</li>
                 <li>Stackoverflow</li>
-                <li>Chat GPT</li>
               </ul>
 
               <p class="mt-[10%] font-medium">Collaboration</p>
               <ul class="list-disc list-inside">
                 <li>Chingu- Matlibs game</li>
-                <li>0AC team- 0x Acid Club project</li>
+                <li>0x Chemist Club project</li>
               </ul>
             </div>
 
@@ -177,9 +175,7 @@
     <a href="https://twitter.com/J_explorer393">
       <i class="fab fa-twitter fa-2x pointer mr-[2%]" id="twitter_bottom"></i>
     </a>
-    <a href="https://www.linkedin.com/in/julia-jovanovic-580132225/">
-      <i class="fab fa-linkedin fa-2x pointer" id="linkedin_bottom"></i>
-    </a>
+   
   </footer>
 
   
