Improved navigation menu and page layout

--- a/gallery.html
+++ b/gallery.html
@@ -23,24 +23,43 @@
   <body>
     <div class="top-section">
       <div class="socials">
+        <a href="https://github.com/j-explorer" target="_blank" class="github">
+          <i class="fa-brands fa-github fa-2xl"></i>
+        </a>
+
         <img
           src="./images/home/In.svg"
           class="linkedin"
           alt="Linkedin icon"
           onclick="window.open('https://www.linkedin.com/in/julia-jovanovic-580132225/', '_blank');"
         />
-        <a href="https://github.com/j-explorer" target="_blank" class="github">
-          <i class="fa-brands fa-github fa-2xl"></i>
-        </a>
       </div>
 
       <nav>
-        <a href="index.html"><h3 id="home">HOME</h3></a>
-        <a href="gallery.html"><h3 id="gallery">GALLERY</h3></a>
-        <a href="uiux.html"><h3 id="uiux">UI/UX</h3></a>
-        <a href="code.html"><h3 id="code">CODE</h3></a>
-        <a href="web3.html"><h3 id="web3">WEB3</h3></a>
+        <a href="index.html"><h3 class="nav-links" id="home">HOME</h3></a>
+        <h3 id="gallery" class="nav-links">GALL.</h3>
+        <a href="uiux.html"><h3 class="nav-links" id="uiux">UI/UX</h3></a>
+        <a href="code.html"><h3 class="nav-links" id="code">CODE</h3></a>
+        <a href="web3.html"><h3 class="nav-links" id="web3">WEB3</h3></a>
       </nav>
+
+      <div class="menu-icon">
+        <div id="bar1"></div>
+        <div id="bar3"></div>
+      </div>
+
+      <div class="mobile-menu">
+        <a href="index.html"><h3 class="mobile-menu-links">HOME</h3></a>
+        <div class="link-divider"></div>
+        <a href="gallery.html"><h3 class="mobile-menu-links">GALLERY</h3></a>
+        <div class="link-divider"></div>
+        <a href="uiux.html"><h3 class="mobile-menu-links">UI/UX</h3></a>
+        <div class="link-divider"></div>
+        <a href="code.html"><h3 class="mobile-menu-links">CODE</h3></a>
+        <div class="link-divider"></div>
+        <a href="web3.html"><h3 class="mobile-menu-links">WEB3</h3></a>
+        <div class="link-divider"></div>
+      </div>
     </div>
 
     <div class="content">
