--- a/index.html
+++ b/index.html
@@ -22,19 +22,25 @@
   <body>
     <div class="content">
       <nav>
-        <a href="gallery.html"><h3 id="gallery">GALLERY</h3></a>
-        <a href="uiux.html"><h3 id="uiux">UI/UX</h3></a>
-        <a href="code.html"><h3 id="code">CODE</h3></a>
-        <a href="web3.html"><h3 id="web3">WEB3</h3></a>
+        <h3 class="nav-links" id="home">HOME</h3>
+        <a href="gallery.html"
+          ><h3 class="nav-links" id="gallery">GALLERY</h3></a
+        >
+        <a href="uiux.html"><h3 class="nav-links" id="uiux">UI/UX</h3></a>
+        <a href="code.html"><h3 class="nav-links" id="code">CODE</h3></a>
+        <a href="web3.html"><h3 class="nav-links" id="web3">WEB3</h3></a>
       </nav>
 
-      <div id="menu-icon">
-        <div id="bar1"></div>
-        <div id="bar2"></div>
-        <div id="bar3"></div>
+      <div id="top-section-mobile">
+        <div class="menu-icon">
+          <div id="bar1"></div>
+          <div id="bar3"></div>
+        </div>
       </div>
 
-      <div id="mobile-menu">
+      <div class="mobile-menu">
+        <a href="index.html"><h3 class="mobile-menu-links">HOME</h3></a>
+        <div class="link-divider"></div>
         <a href="gallery.html"><h3 class="mobile-menu-links">GALLERY</h3></a>
         <div class="link-divider"></div>
         <a href="uiux.html"><h3 class="mobile-menu-links">UI/UX</h3></a>
@@ -61,7 +67,7 @@
 
       <div class="about">
         <h3 id="about-title">ABOUT</h3>
-        <p>
+        <p id="about-p">
           My journey as a self-taught website developer/designer started
           mid-year 2022, just before starting my new life in the UK. The journey
           re-inspired art back in my life and nudged me towards the world of
