--- a/uiux.html
+++ b/uiux.html
@@ -23,12 +23,6 @@
     <div class="content" id="uiux-content">
       <div class="top-section">
         <div class="socials">
-          <img
-            src="./images/home/In.svg"
-            class="linkedin"
-            alt="Linkedin icon"
-            onclick="window.open('https://www.linkedin.com/in/julia-jovanovic-580132225/', '_blank');"
-          />
           <a
             href="https://github.com/j-explorer"
             target="_blank"
@@ -36,47 +30,42 @@
           >
             <i class="fa-brands fa-github fa-2xl"></i>
           </a>
+
+          <img
+            src="./images/home/In.svg"
+            class="linkedin"
+            alt="Linkedin icon"
+            onclick="window.open('https://www.linkedin.com/in/julia-jovanovic-580132225/', '_blank');"
+          />
         </div>
 
         <nav>
-          <a href="index.html"><h3 id="home">HOME</h3></a>
-          <a href="gallery.html"><h3 id="gallery">GALLERY</h3></a>
-          <a href="uiux.html"><h3 id="uiux">UI/UX</h3></a>
-          <a href="code.html"><h3 id="code">CODE</h3></a>
-          <a href="web3.html"><h3 id="web3">WEB3</h3></a>
+          <a href="index.html"><h3 class="nav-links" id="home">HOME</h3></a>
+          <a href="gallery.html"
+            ><h3 class="nav-links" id="gallery">GALL.</h3></a
+          >
+          <h3 class="nav-links" id="uiux">UI/UX</h3>
+          <a href="code.html"><h3 class="nav-links" id="code">CODE</h3></a>
+          <a href="web3.html"><h3 class="nav-links" id="web3">WEB3</h3></a>
         </nav>
-      </div>
 
-      <div id="fluxacademy">
-        <h3 class="page-titles">FLUX ACADEMY</h3>
-        <ul>
-          <li>Free Web Design Course</li>
-          <li>Color Psychology for Designers</li>
-          <li>Complete Guide to Choosing Fonts</li>
-          <li>Design Portfolio Handbook</li>
-        </ul>
-      </div>
+        <div class="menu-icon">
+          <div id="bar1"></div>
+          <div id="bar3"></div>
+        </div>
 
-      <div id="frontendmasters">
-        <h3 class="page-titles">FRONTEND MASTERS</h3>
-        <ul>
-          <li>Design for Developers by Sarah Drasner</li>
-          <li>Web UX Design for High Converting Websites by Paul Boag</li>
-        </ul>
-      </div>
-
-      <div id="books">
-        <h3 class="page-titles">BOOKS</h3>
-        <ul>
-          <li>
-            Grid Systems in Graphic Design by <br />
-            Raster Systeme Fur Die Visuelle Gestaltung
-          </li>
-          <li>
-            Making and Breaking the Grid (second edition) <br />
-            Timothy Samara
-          </li>
-        </ul>
+        <div class="mobile-menu">
+          <a href="index.html"><h3 class="mobile-menu-links">HOME</h3></a>
+          <div class="link-divider"></div>
+          <a href="gallery.html"><h3 class="mobile-menu-links">GALLERY</h3></a>
+          <div class="link-divider"></div>
+          <a href="uiux.html"><h3 class="mobile-menu-links">UI/UX</h3></a>
+          <div class="link-divider"></div>
+          <a href="code.html"><h3 class="mobile-menu-links">CODE</h3></a>
+          <div class="link-divider"></div>
+          <a href="web3.html"><h3 class="mobile-menu-links">WEB3</h3></a>
+          <div class="link-divider"></div>
+        </div>
       </div>
 
       <img
@@ -92,14 +81,70 @@
         src="images/uiux/uiux-blue.svg"
       />
 
+      <div id="fluxacademy">
+        <h3 class="page-titles">FLUX ACADEMY</h3>
+        <ul>
+          <li>Free Web Design Course</li>
+          <li>Color Psychology for Designers</li>
+          <li>Complete Guide to Choosing Fonts</li>
+          <li>Design Portfolio Handbook</li>
+        </ul>
+      </div>
+
+      <div id="frontendmasters">
+        <h3 class="page-titles">FRONTEND MASTERS</h3>
+        <ul>
+          <li>Design for Developers by Sarah Drasner</li>
+          <li>Web UX Design for High Converting Websites</li>
+          <li class="authors">by Paul Boag</li>
+        </ul>
+      </div>
+
+      <div id="books">
+        <h3 class="page-titles">BOOKS</h3>
+        <ul id="books-li">
+          <li>Grid Systems in Graphic Design by</li>
+          <li class="authors">Raster Systeme Fur Die Visuelle Gestaltung</li>
+          <li>Making and Breaking the Grid (second edition)</li>
+          <li class="authors">by Timothy Samara</li>
+        </ul>
+      </div>
+
       <div class="uiux-content">
-        <img
+        <div
           class="uiux-projects"
-          id="memory-trail-uiux"
-          alt="Memory trail app"
-          src="./images/uiux/projects/memory-trail.webp"
           onclick="window.open('https://www.figma.com/proto/xzrwobAecXUZAfZMVKIvKn/Memory-Trail-App?type=design&node-id=834-78&t=JJdWaRnHonkTXo27-1&scaling=scale-down&page-id=348%3A756&starting-point-node-id=834%3A78&mode=design', '_blank');"
-        />
+        >
+          <img
+            class="project-imgs"
+            id="memory-trail-uiux"
+            alt="Memory trail app"
+            src="./images/uiux/projects/memory-trail-app.webp"
+          />
+
+          <div class="uiux-project-descriptions">
+            <h3 class="page-titles">Memory Trail App (In progress)</h3>
+            <p>
+              Memory Trail is an app which helps store memories during the
+              user's travels.
+            </p>
+
+            <p class="features-title">Features:</p>
+            <ul>
+              <li>
+                Can select whether the location is a destination, visited or
+                favorite.
+              </li>
+              <li>
+                Have the option to upload media from your device: photos,
+                videos, notes and voice recordings
+              </li>
+              <li>Can view all media for the specific location in gallery</li>
+              <li>Can view all galleries for all locations</li>
+              <li>Have the option to delete the pin and it's media</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
