--- a/web3.html
+++ b/web3.html
@@ -7,15 +7,61 @@
     <link rel="stylesheet" href="styles/mobile.css" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Archivo"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@900&display=swap"
       rel="stylesheet"
     />
+
     <title>Document</title>
   </head>
   <body id="web3-body">
+    <div class="top-section">
+      <div class="socials">
+        <a href="https://github.com/j-explorer" target="_blank" class="github">
+          <i class="fa-brands fa-github fa-2xl"></i>
+        </a>
+
+        <img
+          src="./images/home/In.svg"
+          class="linkedin"
+          alt="Linkedin icon"
+          onclick="window.open('https://www.linkedin.com/in/julia-jovanovic-580132225/', '_blank');"
+        />
+      </div>
+
+      <nav>
+        <a href="index.html"><h3 class="nav-links" id="home">HOME</h3></a>
+        <a href="gallery.html"><h3 class="nav-links" id="gallery">GALL.</h3></a>
+        <a href="uiux.html"><h3 class="nav-links" id="uiux">UI/UX</h3></a>
+        <a href="code.html"><h3 class="nav-links" id="code">CODE</h3></a>
+        <h3 class="nav-links" id="web3">WEB3</h3>
+      </nav>
+
+      <div class="menu-icon">
+        <div id="bar1"></div>
+        <div id="bar3"></div>
+      </div>
+
+      <div class="mobile-menu">
+        <a href="index.html"><h3 class="mobile-menu-links">HOME</h3></a>
+        <div class="link-divider"></div>
+        <a href="gallery.html"><h3 class="mobile-menu-links">GALLERY</h3></a>
+        <div class="link-divider"></div>
+        <a href="uiux.html"><h3 class="mobile-menu-links">UI/UX</h3></a>
+        <div class="link-divider"></div>
+        <a href="code.html"><h3 class="mobile-menu-links">CODE</h3></a>
+        <div class="link-divider"></div>
+        <a href="web3.html"><h3 class="mobile-menu-links">WEB3</h3></a>
+        <div class="link-divider"></div>
+      </div>
+    </div>
+
     <div class="content" id="web3-content">
       <h3 class="page-titles" id="azuki-title">AZUKI</h3>
 
@@ -30,8 +76,9 @@
       </p>
 
       <button onclick="window.open('https://www.azuki.com/', '_blank');">
-        Azuki
+        Check out Azuki
       </button>
     </div>
+    <script src="scripts/mobile.js"></script>
   </body>
 </html>
